kubernetes-1/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-app
          image: syyurkin/hello-app:v1
          ports:
            - name: web
              containerPort: 80
          livenessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
