kubernetes-1/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-demo
spec:
  selector:
    app: hello-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
